--- a/src/app/show-data/show-data.component.html
+++ b/src/app/show-data/show-data.component.html
@@ -102,7 +102,7 @@
                 <input type="text" placeholder="Insira uma palavra chave">
             </div> -->
             <div>
-                <span class="header-hello">Olá, Usuário!</span>
+                <span class="header-hello">Bem vindo, {{ user }}</span>
                 <a href=""><span>LogOut</span></a>
             </div>
             
