--- a/src/app/usuario/download/download.component.html
+++ b/src/app/usuario/download/download.component.html
@@ -1,31 +1,12 @@
 <div>
-
   <body>
     <img src="../../assets/img/Conexaoum.png" alt="" class="conexao1">
     <img src="../../assets/img/Conexaodois.png" alt="" class="conexao2">
-
     <div class="container">
       <img routerLink="" src="../../assets/img/logo.png" alt="" class="logologin">
-
-
       <div class="login">
-        <h1 class="titulo space-around">Cadastre-se:</h1>
-
-          <input
-            id="nomeFuncionario"
-            type="text"
-            
-            
-            name="nomeFuncionario"            
-            placeholder="Nome"
-            class="form-control" 
-            required
-            >
-
-          <button class="button">Cadastrar</button>
-
-
-        
+        <h1 class="titulo space-around">Pronto! Agora faça o download do nosso arquivo para começar!</h1>
+         <button class="button"> <a href="https://drive.google.com/u/0/uc?id=1UngVYFdgL3sKjdBxoBxjTqeZyBM0C7aW&export=download">Download</a></button>
       </div>
     </div>
   </body>
