--- a/src/app/configuracoes/configuracoes.component.html
+++ b/src/app/configuracoes/configuracoes.component.html
@@ -48,27 +48,47 @@
                         <span>Overview</span>
                     </a>
                 </li>
-                <li><a routerLink="/analytics">
-                        <span>
-                            <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="25" height="25"
-                                viewBox="0 0 172 172" style=" fill:#000000;">
-                                <g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt"
-                                    stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray=""
-                                    stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none"
-                                    text-anchor="none" style="mix-blend-mode: normal">
-                                    <path d="M0,172v-172h172v172z" fill="none"></path>
-                                    <g fill="#ffffff">
-                                        <path
-                                            d="M75.68,13.76c-1.90232,0 -3.44,1.53768 -3.44,3.44v74.9275l0.59125,0.26203c20.382,8.9268 29.46495,12.92693 33.62735,14.78797l0.1814,-0.11422v-89.86328c0,-1.90232 -1.53768,-3.44 -3.44,-3.44zM30.96,34.4c-1.89978,0.00019 -3.43981,1.54022 -3.44,3.44v59.83719l-18.52359,7.71313c-1.7544,0.7224 -2.11641,2.31732 -2.11641,4.49484v41.43453c0,1.89888 1.54112,3.44 3.44,3.44c1.0492,0 1.88818,-0.56539 2.02234,-0.66515l11.98625,-8.79485c6.10944,-4.48232 14.25385,-5.46761 21.41937,-2.51953l40.23188,14.26391c2.26008,0.80152 4.60159,1.19594 6.92703,1.19594c4.44104,0 8.81672,-1.43674 12.47,-4.20594l54.13297,-41.01797c5.74824,-3.96288 7.33349,-11.69665 3.60797,-17.60313c-2.60886,-4.13932 -7.19387,-6.23377 -11.75781,-5.96625v-37.84672c-0.00019,-1.89978 -1.54022,-3.43981 -3.44,-3.44h-27.52c-1.89978,0.00019 -3.43981,1.54022 -3.44,3.44v57.19l-3.86328,2.37844c2.43896,2.48712 3.86328,5.86617 3.86328,9.41969c0,7.4648 -6.07348,13.53828 -13.53828,13.53828c-1.05264,0 -2.09614,-0.12545 -3.10406,-0.36281c-2.64536,-0.62608 -36.4397,-10.74323 -40.28562,-11.89219c-1.81976,-0.54696 -2.84805,-2.4668 -2.30453,-4.28656c0.54696,-1.81976 2.46353,-2.84805 4.27985,-2.30453c15.01904,4.49952 38.04178,11.35108 39.89594,11.7914c0.49192,0.11696 1.00244,0.17469 1.51844,0.17469c3.67048,0 6.65828,-2.98108 6.65828,-6.65156c0,-2.37016 -1.23163,-4.50038 -3.29219,-5.6975c-1.00104,-0.58136 -34.95551,-15.42657 -41.78391,-18.42281c-1.00929,-0.44331 -2.04819,-0.8074 -3.0839,-1.16906v-57.46547c-0.00019,-1.89978 -1.54022,-3.43981 -3.44,-3.44zM34.4,41.28h20.64v52.25844c-6.8697,-1.1782 -13.96742,-0.70101 -20.64,1.46469zM123.84,55.04h20.64v36.78515l-20.64,12.72531z">
-                                        </path>
-                                    </g>
+                <li><a routerLink="/analytics/1">
+                    <span>
+                        <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="25" height="25"
+                            viewBox="0 0 172 172" style=" fill:#000000;">
+                            <g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1"
+                                stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10"
+                                stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none"
+                                font-size="none" text-anchor="none" style="mix-blend-mode: normal">
+                                <path d="M0,172v-172h172v172z" fill="none"></path>
+                                <g fill="#ffffff">
+                                    <path
+                                        d="M75.68,13.76c-1.90232,0 -3.44,1.53768 -3.44,3.44v74.9275l0.59125,0.26203c20.382,8.9268 29.46495,12.92693 33.62735,14.78797l0.1814,-0.11422v-89.86328c0,-1.90232 -1.53768,-3.44 -3.44,-3.44zM30.96,34.4c-1.89978,0.00019 -3.43981,1.54022 -3.44,3.44v59.83719l-18.52359,7.71313c-1.7544,0.7224 -2.11641,2.31732 -2.11641,4.49484v41.43453c0,1.89888 1.54112,3.44 3.44,3.44c1.0492,0 1.88818,-0.56539 2.02234,-0.66515l11.98625,-8.79485c6.10944,-4.48232 14.25385,-5.46761 21.41937,-2.51953l40.23188,14.26391c2.26008,0.80152 4.60159,1.19594 6.92703,1.19594c4.44104,0 8.81672,-1.43674 12.47,-4.20594l54.13297,-41.01797c5.74824,-3.96288 7.33349,-11.69665 3.60797,-17.60313c-2.60886,-4.13932 -7.19387,-6.23377 -11.75781,-5.96625v-37.84672c-0.00019,-1.89978 -1.54022,-3.43981 -3.44,-3.44h-27.52c-1.89978,0.00019 -3.43981,1.54022 -3.44,3.44v57.19l-3.86328,2.37844c2.43896,2.48712 3.86328,5.86617 3.86328,9.41969c0,7.4648 -6.07348,13.53828 -13.53828,13.53828c-1.05264,0 -2.09614,-0.12545 -3.10406,-0.36281c-2.64536,-0.62608 -36.4397,-10.74323 -40.28562,-11.89219c-1.81976,-0.54696 -2.84805,-2.4668 -2.30453,-4.28656c0.54696,-1.81976 2.46353,-2.84805 4.27985,-2.30453c15.01904,4.49952 38.04178,11.35108 39.89594,11.7914c0.49192,0.11696 1.00244,0.17469 1.51844,0.17469c3.67048,0 6.65828,-2.98108 6.65828,-6.65156c0,-2.37016 -1.23163,-4.50038 -3.29219,-5.6975c-1.00104,-0.58136 -34.95551,-15.42657 -41.78391,-18.42281c-1.00929,-0.44331 -2.04819,-0.8074 -3.0839,-1.16906v-57.46547c-0.00019,-1.89978 -1.54022,-3.43981 -3.44,-3.44zM34.4,41.28h20.64v52.25844c-6.8697,-1.1782 -13.96742,-0.70101 -20.64,1.46469zM123.84,55.04h20.64v36.78515l-20.64,12.72531z">
+                                    </path>
                                 </g>
-                            </svg>
+                            </g>
+                        </svg>
+                    </span>
+                    <span>Máquina {{ maquinasList[0].idMaquina }}</span>
+                </a>
+            </li>
 
-                        </span>
-                        <span>Analytics</span>
-                    </a>
-                </li>
+            <li *ngIf="maquinasList[1]"><a routerLink="/analytics/2" >
+                <span>
+                    <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="25" height="25"
+                        viewBox="0 0 172 172" style=" fill:#000000;">
+                        <g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1"
+                            stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10"
+                            stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none"
+                            font-size="none" text-anchor="none" style="mix-blend-mode: normal">
+                            <path d="M0,172v-172h172v172z" fill="none"></path>
+                            <g fill="#ffffff">
+                                <path
+                                    d="M75.68,13.76c-1.90232,0 -3.44,1.53768 -3.44,3.44v74.9275l0.59125,0.26203c20.382,8.9268 29.46495,12.92693 33.62735,14.78797l0.1814,-0.11422v-89.86328c0,-1.90232 -1.53768,-3.44 -3.44,-3.44zM30.96,34.4c-1.89978,0.00019 -3.43981,1.54022 -3.44,3.44v59.83719l-18.52359,7.71313c-1.7544,0.7224 -2.11641,2.31732 -2.11641,4.49484v41.43453c0,1.89888 1.54112,3.44 3.44,3.44c1.0492,0 1.88818,-0.56539 2.02234,-0.66515l11.98625,-8.79485c6.10944,-4.48232 14.25385,-5.46761 21.41937,-2.51953l40.23188,14.26391c2.26008,0.80152 4.60159,1.19594 6.92703,1.19594c4.44104,0 8.81672,-1.43674 12.47,-4.20594l54.13297,-41.01797c5.74824,-3.96288 7.33349,-11.69665 3.60797,-17.60313c-2.60886,-4.13932 -7.19387,-6.23377 -11.75781,-5.96625v-37.84672c-0.00019,-1.89978 -1.54022,-3.43981 -3.44,-3.44h-27.52c-1.89978,0.00019 -3.43981,1.54022 -3.44,3.44v57.19l-3.86328,2.37844c2.43896,2.48712 3.86328,5.86617 3.86328,9.41969c0,7.4648 -6.07348,13.53828 -13.53828,13.53828c-1.05264,0 -2.09614,-0.12545 -3.10406,-0.36281c-2.64536,-0.62608 -36.4397,-10.74323 -40.28562,-11.89219c-1.81976,-0.54696 -2.84805,-2.4668 -2.30453,-4.28656c0.54696,-1.81976 2.46353,-2.84805 4.27985,-2.30453c15.01904,4.49952 38.04178,11.35108 39.89594,11.7914c0.49192,0.11696 1.00244,0.17469 1.51844,0.17469c3.67048,0 6.65828,-2.98108 6.65828,-6.65156c0,-2.37016 -1.23163,-4.50038 -3.29219,-5.6975c-1.00104,-0.58136 -34.95551,-15.42657 -41.78391,-18.42281c-1.00929,-0.44331 -2.04819,-0.8074 -3.0839,-1.16906v-57.46547c-0.00019,-1.89978 -1.54022,-3.43981 -3.44,-3.44zM34.4,41.28h20.64v52.25844c-6.8697,-1.1782 -13.96742,-0.70101 -20.64,1.46469zM123.84,55.04h20.64v36.78515l-20.64,12.72531z">
+                                </path>
+                            </g>
+                        </g>
+                    </svg>
+                </span>
+                <span>Máquina {{ maquinasList[1].idMaquina }}</span>
+            </a>
+            </li>
                 <li><a routerLink="/configuracoes" class="active">
                         <span><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="25" height="25"
                                 viewBox="0 0 172 172" style=" fill:#000000;">
@@ -101,13 +121,14 @@
             </div> -->
             
             <div>
-                <span class="header-hello">Olá, Usuário!</span>
+                <span class="header-hello">Bem vindo, {{ user }}</span>
                 <a href=""><span>LogOut</span></a>
             </div>
         </header>
         <main>
             <div class="info-grid">
-                <div class="card-info" *ngIf="userList[0]">
+                <!-- <div class="card-info" *ngIf="userLog"> -->
+                <div class="card-info" >
                     <h1>Conta</h1>
 
                     <!-- <tr *ngIf="userList[0]" style="color: white;">
@@ -117,19 +138,20 @@
                         <td>{{ userList[0].senhFuncionario }}</td>
                         </tr> -->
                     <span>Nome Completo:</span>
-                    <span style="padding-left: 2rem;"> {{ userList[0].nomeFuncionario }} {{
-                        userList[0].sobrenomeFuncionario }} </span><br>
+                    <span style="padding-left: 3.5rem;"> {{ userLog.nomeFuncionario }} {{
+                        userLog.sobrenomeFuncionario }} </span><br>
                     <span>Email:</span>
-                    <span style="padding-left: 6rem;">{{ userList[0].loginFuncionario }}</span><br>
-                    <span>Telefone:</span>
-                    <span style="padding-left: 6rem;">{{ userList[0].loginFuncionario }}</span><br>
+                    <span style="padding-left: 8.5rem;">{{ userLog.loginFuncionario }}</span><br>
+                    <span>CPF:</span>
+                    <span style="padding-left: 9rem;">{{ userLog.cpfFuncionario }}</span><br>
                     <span>Senha:</span> 
-                    <input id="psswd" style="padding-left: 10px; margin-left: 70px;" type="password">
+                    <input [(ngModel)]="psswd" id="psswd" style="padding-left: 10px; margin-left: 167px;" type="password">
                     <span>Confirmar senha:</span> 
-                    <input id="psswd" style="padding-left: 10px; margin-left: 70px;" type="password">
+                    <input [(ngModel)]="psswdConfirm" id="psswdConfirm" style="padding-left: 10px; margin-left: 70px;" type="password">
                     
                     <div class="btn-center" style="margin-top: 40px;">
-                        <button class="btn-salvar">Salvar</button>
+                        <button (click)="updatePassword()" class="btn-salvar">Salvar</button>
+                        <button (click)="deleteAccount(userLog.idFuncionario)" class="btn-salvar">Deletar</button>
                     </div>
                 </div>
 
@@ -137,28 +159,17 @@
                     <h2>Configurações da máquina</h2>
                     <!-- <span>+11 3444-9811</span><br>
                     <span>Contato@dimesion.com.br</span><br> -->
-                    <div class="esquerdo" *ngIf="configList[0]">
-                        <tr *ngFor="let value of configList">
-                            <!-- <td>{{ value.idRegistro }}</td>
-                            <td>{{ value.nomeComponente }}</td>
-                            <td>{{ value.data }}</td>
-                            <td>{{ value.dadosColetados }}</td>
-                            <td>
-                                <button type="button" class="btn btn-light mr-1">Check</button>
-                            </td> -->
+                    <div class="esquerdo" *ngIf="maquinasList[0]">
+                        <tr *ngFor="let value of maquinasList">
                         </tr>
                         <h3>Id Máquina</h3>
-                        <p>{{ configList[0].idComponente }}</p>
+                        <p>{{ maquinasList[0].idMaquina }}</p>
                         <h3>Sistema Operacional</h3>
-                        <p>{{ configList[0].so }}</p>
+                        <p>{{ maquinasList[0].so }}</p>
                         <h3>Processador</h3>
-                        <p>{{ configList[0].processador }}</p>
+                        <p>{{ maquinasList[0].processador }}</p>
                         <h3>Placa de Vídeo</h3>
-                        <p>{{ configList[0].placaVideo }}</p>
-
-                        <div class="btn-center">
-                            <button class="btn-salvar">Salvar</button>
-                        </div>
+                        <p>{{ maquinasList[0].placaVideo }}</p>
                     </div>
 
                 </div>
