--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -52,27 +52,47 @@
                         <span>Overview</span>
                     </a>
                 </li>
-                <li><a routerLink="/analytics">
-                        <span>
-                            <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="25" height="25"
-                                viewBox="0 0 172 172" style=" fill:#000000;">
-                                <g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt"
-                                    stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray=""
-                                    stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none"
-                                    text-anchor="none" style="mix-blend-mode: normal">
-                                    <path d="M0,172v-172h172v172z" fill="none"></path>
-                                    <g fill="#ffffff">
-                                        <path
-                                            d="M75.68,13.76c-1.90232,0 -3.44,1.53768 -3.44,3.44v74.9275l0.59125,0.26203c20.382,8.9268 29.46495,12.92693 33.62735,14.78797l0.1814,-0.11422v-89.86328c0,-1.90232 -1.53768,-3.44 -3.44,-3.44zM30.96,34.4c-1.89978,0.00019 -3.43981,1.54022 -3.44,3.44v59.83719l-18.52359,7.71313c-1.7544,0.7224 -2.11641,2.31732 -2.11641,4.49484v41.43453c0,1.89888 1.54112,3.44 3.44,3.44c1.0492,0 1.88818,-0.56539 2.02234,-0.66515l11.98625,-8.79485c6.10944,-4.48232 14.25385,-5.46761 21.41937,-2.51953l40.23188,14.26391c2.26008,0.80152 4.60159,1.19594 6.92703,1.19594c4.44104,0 8.81672,-1.43674 12.47,-4.20594l54.13297,-41.01797c5.74824,-3.96288 7.33349,-11.69665 3.60797,-17.60313c-2.60886,-4.13932 -7.19387,-6.23377 -11.75781,-5.96625v-37.84672c-0.00019,-1.89978 -1.54022,-3.43981 -3.44,-3.44h-27.52c-1.89978,0.00019 -3.43981,1.54022 -3.44,3.44v57.19l-3.86328,2.37844c2.43896,2.48712 3.86328,5.86617 3.86328,9.41969c0,7.4648 -6.07348,13.53828 -13.53828,13.53828c-1.05264,0 -2.09614,-0.12545 -3.10406,-0.36281c-2.64536,-0.62608 -36.4397,-10.74323 -40.28562,-11.89219c-1.81976,-0.54696 -2.84805,-2.4668 -2.30453,-4.28656c0.54696,-1.81976 2.46353,-2.84805 4.27985,-2.30453c15.01904,4.49952 38.04178,11.35108 39.89594,11.7914c0.49192,0.11696 1.00244,0.17469 1.51844,0.17469c3.67048,0 6.65828,-2.98108 6.65828,-6.65156c0,-2.37016 -1.23163,-4.50038 -3.29219,-5.6975c-1.00104,-0.58136 -34.95551,-15.42657 -41.78391,-18.42281c-1.00929,-0.44331 -2.04819,-0.8074 -3.0839,-1.16906v-57.46547c-0.00019,-1.89978 -1.54022,-3.43981 -3.44,-3.44zM34.4,41.28h20.64v52.25844c-6.8697,-1.1782 -13.96742,-0.70101 -20.64,1.46469zM123.84,55.04h20.64v36.78515l-20.64,12.72531z">
-                                        </path>
-                                    </g>
+                <li><a routerLink="/analytics/1" >
+                    <span>
+                        <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="25" height="25"
+                            viewBox="0 0 172 172" style=" fill:#000000;">
+                            <g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1"
+                                stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10"
+                                stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none"
+                                font-size="none" text-anchor="none" style="mix-blend-mode: normal">
+                                <path d="M0,172v-172h172v172z" fill="none"></path>
+                                <g fill="#ffffff">
+                                    <path
+                                        d="M75.68,13.76c-1.90232,0 -3.44,1.53768 -3.44,3.44v74.9275l0.59125,0.26203c20.382,8.9268 29.46495,12.92693 33.62735,14.78797l0.1814,-0.11422v-89.86328c0,-1.90232 -1.53768,-3.44 -3.44,-3.44zM30.96,34.4c-1.89978,0.00019 -3.43981,1.54022 -3.44,3.44v59.83719l-18.52359,7.71313c-1.7544,0.7224 -2.11641,2.31732 -2.11641,4.49484v41.43453c0,1.89888 1.54112,3.44 3.44,3.44c1.0492,0 1.88818,-0.56539 2.02234,-0.66515l11.98625,-8.79485c6.10944,-4.48232 14.25385,-5.46761 21.41937,-2.51953l40.23188,14.26391c2.26008,0.80152 4.60159,1.19594 6.92703,1.19594c4.44104,0 8.81672,-1.43674 12.47,-4.20594l54.13297,-41.01797c5.74824,-3.96288 7.33349,-11.69665 3.60797,-17.60313c-2.60886,-4.13932 -7.19387,-6.23377 -11.75781,-5.96625v-37.84672c-0.00019,-1.89978 -1.54022,-3.43981 -3.44,-3.44h-27.52c-1.89978,0.00019 -3.43981,1.54022 -3.44,3.44v57.19l-3.86328,2.37844c2.43896,2.48712 3.86328,5.86617 3.86328,9.41969c0,7.4648 -6.07348,13.53828 -13.53828,13.53828c-1.05264,0 -2.09614,-0.12545 -3.10406,-0.36281c-2.64536,-0.62608 -36.4397,-10.74323 -40.28562,-11.89219c-1.81976,-0.54696 -2.84805,-2.4668 -2.30453,-4.28656c0.54696,-1.81976 2.46353,-2.84805 4.27985,-2.30453c15.01904,4.49952 38.04178,11.35108 39.89594,11.7914c0.49192,0.11696 1.00244,0.17469 1.51844,0.17469c3.67048,0 6.65828,-2.98108 6.65828,-6.65156c0,-2.37016 -1.23163,-4.50038 -3.29219,-5.6975c-1.00104,-0.58136 -34.95551,-15.42657 -41.78391,-18.42281c-1.00929,-0.44331 -2.04819,-0.8074 -3.0839,-1.16906v-57.46547c-0.00019,-1.89978 -1.54022,-3.43981 -3.44,-3.44zM34.4,41.28h20.64v52.25844c-6.8697,-1.1782 -13.96742,-0.70101 -20.64,1.46469zM123.84,55.04h20.64v36.78515l-20.64,12.72531z">
+                                    </path>
                                 </g>
-                            </svg>
+                            </g>
+                        </svg>
+                    </span>
+                    <span>Máquina {{ maquinasList[0].idMaquina }}</span>
+                </a>
+            </li>
 
-                        </span>
-                        <span>Analytics</span>
-                    </a>
-                </li>
+            <li *ngIf="maquinasList[1]"><a routerLink="/analytics/2">
+                <span>
+                    <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="25" height="25"
+                        viewBox="0 0 172 172" style=" fill:#000000;">
+                        <g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1"
+                            stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10"
+                            stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none"
+                            font-size="none" text-anchor="none" style="mix-blend-mode: normal">
+                            <path d="M0,172v-172h172v172z" fill="none"></path>
+                            <g fill="#ffffff">
+                                <path
+                                    d="M75.68,13.76c-1.90232,0 -3.44,1.53768 -3.44,3.44v74.9275l0.59125,0.26203c20.382,8.9268 29.46495,12.92693 33.62735,14.78797l0.1814,-0.11422v-89.86328c0,-1.90232 -1.53768,-3.44 -3.44,-3.44zM30.96,34.4c-1.89978,0.00019 -3.43981,1.54022 -3.44,3.44v59.83719l-18.52359,7.71313c-1.7544,0.7224 -2.11641,2.31732 -2.11641,4.49484v41.43453c0,1.89888 1.54112,3.44 3.44,3.44c1.0492,0 1.88818,-0.56539 2.02234,-0.66515l11.98625,-8.79485c6.10944,-4.48232 14.25385,-5.46761 21.41937,-2.51953l40.23188,14.26391c2.26008,0.80152 4.60159,1.19594 6.92703,1.19594c4.44104,0 8.81672,-1.43674 12.47,-4.20594l54.13297,-41.01797c5.74824,-3.96288 7.33349,-11.69665 3.60797,-17.60313c-2.60886,-4.13932 -7.19387,-6.23377 -11.75781,-5.96625v-37.84672c-0.00019,-1.89978 -1.54022,-3.43981 -3.44,-3.44h-27.52c-1.89978,0.00019 -3.43981,1.54022 -3.44,3.44v57.19l-3.86328,2.37844c2.43896,2.48712 3.86328,5.86617 3.86328,9.41969c0,7.4648 -6.07348,13.53828 -13.53828,13.53828c-1.05264,0 -2.09614,-0.12545 -3.10406,-0.36281c-2.64536,-0.62608 -36.4397,-10.74323 -40.28562,-11.89219c-1.81976,-0.54696 -2.84805,-2.4668 -2.30453,-4.28656c0.54696,-1.81976 2.46353,-2.84805 4.27985,-2.30453c15.01904,4.49952 38.04178,11.35108 39.89594,11.7914c0.49192,0.11696 1.00244,0.17469 1.51844,0.17469c3.67048,0 6.65828,-2.98108 6.65828,-6.65156c0,-2.37016 -1.23163,-4.50038 -3.29219,-5.6975c-1.00104,-0.58136 -34.95551,-15.42657 -41.78391,-18.42281c-1.00929,-0.44331 -2.04819,-0.8074 -3.0839,-1.16906v-57.46547c-0.00019,-1.89978 -1.54022,-3.43981 -3.44,-3.44zM34.4,41.28h20.64v52.25844c-6.8697,-1.1782 -13.96742,-0.70101 -20.64,1.46469zM123.84,55.04h20.64v36.78515l-20.64,12.72531z">
+                                </path>
+                            </g>
+                        </g>
+                    </svg>
+                </span>
+                <span>Máquina {{ maquinasList[1].idMaquina }}</span>
+            </a>
+            </li>
                 <li><a routerLink="/configuracoes">
                         <span><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="25" height="25"
                                 viewBox="0 0 172 172" style=" fill:#000000;">
@@ -102,117 +122,101 @@
             </label>
             <div>
                 <span class="header-hello">Bem vindo, {{ user }}</span>
-                <a href=""><span>LogOut</span></a>
+                <a href="" (click)="logout()"><span>LogOut</span></a>
             </div>
         </header>
-        <main class="overview" *ngFor="let value of maquinasList">
-            <div class="overview-title" style="display: inline-flex;" *ngIf="maquinasList">
-                <!-- <tr *ngFor="let value of maquinasList"> -->
-                <!-- <tr>
-                    <h3 style="font-size: x-large;">Máquina ID: {{ value.idMaquina }}  </h3>
-                </tr>
-                <div class="alert alert-danger" *ngIf="showAlertMessage" style="margin-left: 20px;">
-                     {{ showComponent }}
-                </div> -->
+        <!-- <main class="overview" *ngFor="let value of maquinasList"> -->
+        <main class="overview" >
+            <div class="overview-title" style="display: inline-flex;">
             </div>
-            <!-- <div class="esquerdo" *ngIf="maquinasList[0]">
-                <tr *ngFor="let value of maquinasList">
-                    <td>{{ value.idMaquina }}</td>
-                </tr>
-            </div> -->
-            <tr>
+            <tr style="height: 0;">
                 <h3  class="id-maquina">Máquina  </h3>
-                <h3 style="font-size:medium ;"> ID {{ value.idMaquina }}</h3>
+                <h3 style="font-size:medium ;"> ID {{ maquinasList[0].idMaquina }}</h3>
                 <div class="alert alert-danger" *ngIf="showAlertMessage" style="width: 100px; margin-top: 20px; font-size: small;">
                      {{ showComponent }}
                 </div>
             </tr>
-            <div class="chart-grid">
-                <div class="chart-disco">
-                    <div class="chart-head">
-                        <h5>Memória de RAM</h5>
-                    </div>
-                    <canvas id="canvasRAM" height="300px" width="300px"></canvas>
-                    <span class="stats">Status: (value.status)</span>
-                </div>
-
-          
-                    <div class="chart-ram">
+            <div class="chart-grid-all">
+                <div  class="chart-grid" >
+                    <div class="chart-disco">
                         <div class="chart-head">
-                            <h5>Placa de Vídeo</h5>
+                            <h5>Memória de RAM</h5>
                         </div>
-                        <canvas id="canvasGPU" height="300px" width="300px"></canvas>
-                        <span class="stats">Status: (value.status)</span>
+                        <canvas id="canvasRAM" height="300px" width="300px"></canvas>
+                        <span class="stats">Status: {{ statusMessageRam }}</span>
                     </div>
-
-
-                    <div class="chart3">
+              
+                        <div class="chart-ram">
+                            <div class="chart-head">
+                                <h5>Placa de Vídeo</h5>
+                            </div>
+                            <canvas id="canvasGPU" height="300px" width="300px"></canvas>
+                            <span class="stats">Status: {{ statusMessagePlaca }}</span>
+                        </div>
+    
+    
+                        <div class="chart3">
+                            <div class="chart-head">
+                                <h5>CPU</h5>
+                            </div>
+                            <canvas id="canvasProcessador" height="300px" width="300px"></canvas>
+                            <span class="stats">Status: {{ statusMessageCpu}}</span>
+                        </div>
+                
+                    <div class="chart4">
                         <div class="chart-head">
-                            <h5>CPU</h5>
+                            <h5>Disco</h5>
                         </div>
-                        <canvas id="canvasProcessador" height="300px" width="300px"></canvas>
-                        <span class="stats">Status: (value.status)</span>
+                        <canvas id="canvasDisco" height="300px" width="300px"></canvas>
+                        <span class="stats">Status: {{ statusMessageDisco }}</span>
                     </div>
-            
-                <div class="chart4">
-                    <div class="chart-head">
-                        <h5>Disco</h5>
-                    </div>
-                    <canvas id="canvasDisco" height="300px" width="300px"></canvas>
-                    <span class="stats">Status: (value.status)</span>
+    
                 </div>
-
+                
+                <tr style="height: 0;" class="id-position" *ngIf="maquinasList[1].idMaquina">
+                    <h3  class="id-maquina">Máquina  </h3>
+                    <h3 style="font-size:medium ;"> ID {{ maquinasList[1].idMaquina }}</h3>
+                    <div class="alert alert-danger" *ngIf="showAlertMessage2" style="width: 100px; margin-top: 20px; font-size: small;">
+                         {{ showComponent2 }}
+                    </div>
+                </tr>
+                <div *ngIf="maquinasList[1].idMaquina" class="chart-grid2" >
+                    <div class="chart-disco">
+                        <div class="chart-head">
+                            <h5>Memória de RAM</h5>
+                        </div>
+                        <canvas id="canvasRAM2" height="300px" width="300px"></canvas>
+                        <span class="stats">Status: {{ statusMessageRam2 }}</span>
+                    </div>
+              
+                        <div class="chart-ram">
+                            <div class="chart-head">
+                                <h5>Placa de Vídeo</h5>
+                            </div>
+                            <canvas id="canvasGPU2" height="300px" width="300px"></canvas>
+                            <span class="stats">Status: {{ statusMessagePlaca2 }}</span>
+                        </div>
+    
+    
+                        <div class="chart3">
+                            <div class="chart-head">
+                                <h5>CPU</h5>
+                            </div>
+                            <canvas id="canvasProcessador2" height="300px" width="300px"></canvas>
+                            <span class="stats">Status: {{ statusMessageCpu2 }}</span>
+                        </div>
+                
+                    <div class="chart4">
+                        <div class="chart-head">
+                            <h5>Disco</h5>
+                        </div>
+                        <canvas id="canvasDisco2" height="300px" width="300px"></canvas>
+                    </div>
+    
+                </div>                   
+                             
             </div>
-            <!-- <div class="chart-grid">-
-                <div class="chart-disco">
-                    <div class="chart-head">
-                        <h5>Memória RAM</h5>
-                    </div>
-                    <canvas id="canvasRAM" height="300px" width="300px"></canvas>
-                    <span class="stats">Status: {{statusMessageRam}}</span>
-                </div>
-
-                <div class="video-cpu">
-                    <div class="chart-ram">
-                        <div class="chart-head">
-                            <h5>Placa de Vídeo</h5>
-                        </div>
-                        <canvas id="canvasGPU" height="300px" width="300px"></canvas>
-                        <span class="stats">Status: {{statusMessagePlaca}}</span>
-                    </div>
-
-
-                    <div class="chart3">
-                        <div class="chart-head">
-                            <h5>CPU</h5>
-                        </div>
-                        <canvas id="canvasProcessador" height="300px" width="300px"></canvas>
-                        <span class="stats">Status: {{statusMessageCpu}}</span>
-                    </div>
-                </div>
-                <div class="chart4">
-                    <div class="chart-head">
-                        <h5>Disco</h5>
-                    </div>
-                    <canvas id="canvasDisco" height="300px" width="300px"></canvas>
-                    <span class="stats">Status: {{statusMessageDisco}}</span>
-                </div>
-
-            </div> -->
-            
-
-            <!-- <div class="direito">
-                <h3>Graficos em risco:</h3>
-                <canvas id="canvas" height="350px" width="700px"></canvas>
-            </div> -->
         </main>
     </div>
-
-    <!-- <label class="close-mobile-menu" for="menu-toggle"></label>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.min.js"></script>
-    <script src="main.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script> -->
 
 </body>
