--- a/src/app/show-data-2/show-data-2.component.css
+++ b/src/app/show-data-2/show-data-2.component.css
@@ -179,50 +179,24 @@ main {
 
 .overview {
     margin-top: calc(70px + .5rem);
-    padding: 0rem 2rem;
+    padding: 3rem 4rem;
     display: flex;
     justify-content: space-between;
 }
 
-.overview-title {
-    position: absolute;
-    top: 100px;
-    left: 368px;
-
-}
-
-.info-maquina {
-    /* display: inline-flex; */
-    width: 270px;
-    justify-content: space-between;
-    /* padding: 20px; */
-}
-
-.id-maquina {
-    margin-top: 15px;
-    font-size: x-large;
-    margin-right: 10px;
-}
-
-.id-position {    
-    margin-left: -262px;
-    width: 38px;
-    margin-top: -40px;
-}
-
 .esquerdo {
     padding: 20px;
+    margin-top: 50px;
 }
 
 .esquerdo h1 {
-    font-size: 40px;
+    font-size: 50px;
     margin-bottom: 40px;
 }
 
 .esquerdo h3 {
     padding: 20px;
-    font-size: 20px;
-    font-size: 22px;
+    font-size: 25px;
 }
 
 .esquerdo p {
@@ -232,18 +206,17 @@ main {
 
 .direito {
     padding: 20px;
-    margin-right: 50px;
-    flex-direction: column; 
-    justify-content: flex-end;
-}
-
-.direito h1 {
-    font-size: 40px;
-    margin-bottom: 40px;
+    margin-top: 80px;
 }
 
 .direito span {
-    margin-bottom: 20px;
+    font-size: 30px;
+    margin-left: -150%;
+}
+
+.direito h1 {
+    margin-top: 50%;
+    margin-left: -100%;
 }
 
 details {
@@ -338,64 +311,43 @@ details[open] summary:after {
 
 .chart-grid {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr;
     grid-template-areas: "disco ram" "cpu cpu";
     margin: 0rem 0rem;
     grid-gap: 1rem;
     width: 100%;
     z-index: 1;
-    padding-left: 0;
 }
-
-.chart-grid2 {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr;
-    grid-template-areas: "disco ram" "cpu cpu";
-    margin: 0rem 0rem;
-    grid-gap: 1rem;
-    width: 100%;
-    z-index: 1;
-    padding-left: 0;
-}
-
-
-.chart-grid-all {
-    display: grid;
-    grid-template-rows: 1fr;
-    grid-template-areas: "chart-grid" 
-                        "chart-grid2";
-}
-
 
 .chart-disco, .chart-ram {
     border: 2px solid #202020;
     width: 100%;
     border-radius: 10px;
-    margin-top: .8rem;
+    margin-top: .8rem;    
+    /* height: 95%; */
+
 }
 
 .chart3 {
     border: 2px solid #202020;
     width: 100%;
     border-radius: 10px; 
-    height: 98%;
-    margin-top: 10px;
 }
 
 .chart4 {
     border: 2px solid #202020;
     width: 100%;
-    border-radius: 10px; 
-    margin-top: 10px;
-   
+    border-radius: 10px;  
+}
+
+.chart-cpu {
+    grid-area: cpu;
 }
 
 .chart-ram {
     grid-area: ram;
 }
-
 
 .chart-head {
     display: flex;
@@ -403,12 +355,6 @@ details[open] summary:after {
     align-items: center;
     margin-left: 20px;
     margin-top: 5px;
-}
-
-.stats {
-    display: flex;
-    justify-content: center;
-    font-size: smaller;
 }
 
 .close-mobile-menu {
@@ -718,7 +664,7 @@ details[open] summary:after {
         margin-top: 0;
         margin-left: 0;
     }
-
+    
     details {
         padding-top: 20px;
     }
@@ -817,6 +763,3 @@ details[open] summary:after {
     border-radius: 20px;
 }
 
-#canvas {
-    margin-top: 21px;
-}
