--- a/src/app/show-data-2/show-data-2.component.html
+++ b/src/app/show-data-2/show-data-2.component.html
@@ -48,7 +48,7 @@
                             <span>Overview</span>
                         </a>
                     </li>
-                    <li><a routerLink="/analytics/1" class="active">
+                    <li><a routerLink="/analytics/1">
                             <span>
                                 <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="25" height="25"
                                     viewBox="0 0 172 172" style=" fill:#000000;">
@@ -69,7 +69,7 @@
                         </a>
                     </li>
 
-                    <li *ngIf="maquinasList[1]"><a routerLink="/analytics/2">
+                    <li><a routerLink="/analytics/2" class="active">
                         <span>
                             <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="25" height="25"
                                 viewBox="0 0 172 172" style=" fill:#000000;">
@@ -88,7 +88,7 @@
                         </span>
                         <span>Máquina {{ maquinasList[1].idMaquina }}</span>
                     </a>
-                    </li>
+                </li>
 
                     <li><a routerLink="/configuracoes">
                             <span><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="25" height="25"
@@ -136,23 +136,23 @@
                             {{ showComponent }}
                        </div>
                     </div>
-                    <canvas id="canvasRAM" height="300px" width="700px"></canvas>
-                    <span class="stats">Status: {{ statusMessageCpu2 }}</span>
+                    <canvas id="canvasRAM2" height="300px" width="700px"></canvas>
+                    <span class="stats">Status: {{ statusMessageRam2 }}</span>
                 </div>
 
                 <div class="chart-ram">
                     <div class="chart-head">
                         <h3>Placa de Vídeo</h3>
                     </div>
-                    <canvas id="canvasGPU" height="300px" width="700px"></canvas>
-                    <span class="stats">Status: {{ statusMessageCpu2 }}</span>
+                    <canvas id="canvasGPU2" height="300px" width="700px"></canvas>
+                    <span class="stats">Status: {{ statusMessagePlaca2 }}</span>
                 </div>
 
                 <div class="chart3">
                     <div class="chart-head">
                         <h3>CPU</h3>
                     </div>
-                    <canvas id="canvasProcessador" height="300px" width="700px"></canvas>
+                    <canvas id="canvasProcessador2" height="300px" width="700px"></canvas>
                     <span class="stats">Status: {{ statusMessageCpu2 }}</span>
                 </div>
 
@@ -160,7 +160,7 @@
                     <div class="chart-head">
                         <h3>Disco</h3>
                     </div>
-                    <canvas id="canvasDisco" height="300px" width="700px"></canvas>
+                    <canvas id="canvasDisco2" height="300px" width="700px"></canvas>
                 </div>
             </div>
         </main>
