Fix: argument config

--- a/src/app/configuracoes/configuracoes.component.html
+++ b/src/app/configuracoes/configuracoes.component.html
@@ -151,7 +151,7 @@
                     
                     <div class="btn-center" style="margin-top: 40px;">
                         <button (click)="updatePassword()" class="btn-salvar">Salvar</button>
-                        <button (click)="deleteAccount(userLog.idFuncionario)" class="btn-salvar">Deletar</button>
+                        <button (click)="deleteAccount()" class="btn-salvar">Deletar</button>
                     </div>
                 </div>
 
