--- a/src/app/usuario/download/download.component.html
+++ b/src/app/usuario/download/download.component.html
@@ -6,7 +6,7 @@
       <img routerLink="" src="../../assets/img/logo.png" alt="" class="logologin">
       <div class="login">
         <h1 class="titulo space-around">Pronto! Agora faça o download do nosso arquivo para começar!</h1>
-         <button class="button"> <a href="https://drive.google.com/u/0/uc?id=1UngVYFdgL3sKjdBxoBxjTqeZyBM0C7aW&export=download">Download</a></button>
+         <button class="button"> <a href="https://we.tl/t-r4Gy95lENF">Download</a></button>
       </div>
     </div>
   </body>
